[tool.poetry]
name = "dataengineering"
version = "0.1.2"
description = "Utilities Python module for Data Engineering at Merkle Science"
authors = ["Data Engineering <dataengineering@merklescience.com>"]


[tool.poetry.dependencies]
python = ">=3.7,<3.10"
toml = "^0.10.2"
pandas-gbq = "^0.10.0"
psycopg2-binary = "^2.9.1"
python-decouple = "^3.6"
apache-airflow = "^2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
interrogate = "^1.5.0"
mimesis = "<5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    # use https://docs.python.org/3/library/warnings.html#warning-filter
    # for more filters
    "ignore::DeprecationWarning",
]
