[tool.poetry]
name = "dataengineering"
version = "0.2.2"
description = "Utilities Python module for Data Engineering at Merkle Science"
authors = ["Data Engineering <dataengineering@merklescience.com>"]


[tool.poetry.dependencies]
python = ">=3.7,<3.10"
toml = "^0.10.2"
pandas-gbq = "^0.10.0"
psycopg2-binary = "^2.9.1"
python-decouple = "^3.6"
google-api-python-client = "^2.57.0"
google-cloud-storage = "^2.5.0"
Jinja2 = "^3.1.2"
boto3 = "^1.24.70"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
interrogate = "^1.5.0"
mimesis = "<5"
testcontainers = {extras = ["clickhouse"], version = "^3.6.1"}
ipdb = "^0.13.9"
Markdown = ">3.3.5"
apache-airflow = "^2.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    # use https://docs.python.org/3/library/warnings.html#warning-filter
    # for more filters
    "ignore::DeprecationWarning",
    # TODO: figure out how to hide airflow-related warnings during testing.
    "ignore:::airflow"
]
